# pixi-test

./: .gitignore  main.py  main.sh  pkg.txt  pyproject.toml
.github/workflows/: pip.yaml  pixi.yaml  pypi.yaml  test-pr-1925.yaml  test.yaml  uv.yaml
